fixes lots of bugs in CSS: Fixes spacing in text posts and image posts

--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -22,6 +22,11 @@
     border-radius: 5px;
     display: flex;
     align-items: center;
+
+  }
+
+  .navIcon {
+    width: 1.3rem;
   }
 
   .active {
