--- a/src/components/Post/Post.module.scss
+++ b/src/components/Post/Post.module.scss
@@ -21,7 +21,7 @@
 }
 
 .likeCommentContainer {
-  padding: 10px 25px 10px 25px;
+  padding: 10px 15px 10px 15px;
   border-radius: 4px;
 
 }
