--- a/src/pages/index/FeedPg.module.scss
+++ b/src/pages/index/FeedPg.module.scss
@@ -115,6 +115,6 @@ body {
 }
 
 .followUnfollowDelete {
-  padding-right: 10px;
+  padding-right: 5px;
   width: 1.3rem;
 }
